force-app/main/default/objects/Reservation__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipName>CustomerReservations</relationshipName>
</CustomField>