force-app/main/default/objects/Reservation__c/fields/Reservation_DateTime__c.field-meta.xml
<CustomField>
  <fullName>Reservation_DateTime__c</fullName>
  <label>Reservation DateTime</label>
  <type>DateTime</type>
  <required>true</required>
  <description>Stores combined date and time for reservation</description>
</CustomField>