force-app/main/default/objects/Reservation__c/validationRules/Positive_Number_of_Guests.validationRule-meta.xml
<ValidationRule>
  <fullName>Positive_Number_of_Guests</fullName>
  <active>true</active>
  <description>Ensure number of guests is greater than zero</description>
  <errorConditionFormula>
    Number_of_Guests__c &lt;= 0
  </errorConditionFormula>
  <errorMessage>Number of guests must be greater than 0.</errorMessage>
  <errorDisplayField>Number_of_Guests__c</errorDisplayField>
</ValidationRule>