force-app/main/default/objects/Reservation__c/validationRules/Prevent_Past_Reservation.validationRule-meta.xml
<ValidationRule>
  <fullName>Prevent_Past_Reservation</fullName>
  <active>true</active>
  <description>Prevent booking for past date and time</description>
  <errorConditionFormula>
    Reservation_DateTime__c &lt; NOW()
  </errorConditionFormula>
  <errorMessage>Reservation date and time cannot be in the past.</errorMessage>
  <errorDisplayField>Reservation_DateTime__c</errorDisplayField>
</ValidationRule>